[project]
name = "mwax_mover"
version = "1.5.0"
description = "A module to manage input, archiving and calibration for the MWAX correlator"
readme = "README.md"
requires-python = ">=3.12, <3.15"
keywords = ["MWA", "MWAX", "radioastronomy", "radiotelescope"]
authors = [
    { email = "greg.sleap@curtin.edu.au" },
    { name = "Greg Sleap" },
    { email = "dev.null@curtin.edu.au" },
    { name = "Dev Null" },
]
maintainers = [{ email = "greg.sleap@curtin.edu.au" }, { name = "Greg Sleap" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "astropy",
    "coloredlogs",
    "flask",
    "importlib_metadata",
    "inotify",
    "matplotlib",
    "mwalib>=2.0.0",
    "pandas",
    "psycopg[binary]",
    "psycopg[pool]",
    "redis>=7.1.1",
    "requests",
    "scipy",
    "seaborn",
    "tenacity",
]

[dependency-groups]
dev = ["pytest", "pytest-cov"]

[project.urls]
homepage = "https://github.com/MWATelescope/mwax_mover"
documentation = "https://github.com/MWATelescope/mwax_mover"
repository = "https://github.com/MWATelescope/mwax_mover"
changelog = "https://github.com/MWATelescope/mwax_mover/CHANGELOG.md"

[project.scripts]
mwax_calvin_processor = "mwax_mover.mwax_calvin_processor:main"
mwax_calvin_controller = "mwax_mover.mwax_calvin_controller:main"
mwax_subfile_distributor = "mwax_mover.mwax_subfile_distributor:main"
mwacache_archiver = "mwax_mover.mwacache_archive_processor:main"
mwacache_checks = "mwax_mover.mwacache_checks:main"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.uv]
package = true

[tool.uv.sources]
sigpyproc = { git = "https://github.com/FRBs/sigpyproc3" }

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_date_format = "%Y-%m-%dT%H:%M:%S"