[metadata]
name = mwax_mover
version = 0.11.18
author = Greg Sleap
author_email = greg.sleap@curtin.edu.au
description = A module to manage input and archiving for the MWAX correlator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MWATelescope/mwax_mover
keywords = 
    MWA
    radioastronomy

project_urls =
    Bug Tracker = https://github.com/MWATelescope/mwax_mover/issues
classifiers =    
    Development Status :: 4 - Beta  
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)    
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    inotify>=0.2
    psycopg2-binary>=2
    requests>=2
    tenacity>=8
    python-openstackclient>=5
    boto3>=1
    astropy>=5

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
            mwax_mover = mwax_mover.mwax_mover:main
            mwax_subfile_distributor = mwax_mover.mwax_subfile_distributor:main
            mwacache_archiver = mwax_mover.mwacache_archive_processor:main

[options.extras_require]
# Use: pip install -e .[test]
# to install the package in developer/editable mode along with the test dependencies.
test =
    pytest
