[metadata]
name = mwax_mover
version = 0.17.40
author = Greg Sleap, Dev Null
author_email = greg.sleap@curtin.edu.au, dev.null@curtin.edu.au
description = A module to manage input and archiving for the MWAX correlator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MWATelescope/mwax_mover
keywords =
    MWA
    radioastronomy

project_urls =
    Bug Tracker = https://github.com/MWATelescope/mwax_mover/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    inotify
    psycopg2-binary
    requests
    tenacity
    boto3
    astropy
    scipy
    importlib_metadata    
    pandas
    seaborn
    coloredlogs
    matplotlib

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
            mwax_calvin_processor = mwax_mover.mwax_calvin_processor:main
            mwax_calvin_download_processor = mwax_mover.mwax_calvin_download_processor:main
            mwax_subfile_distributor = mwax_mover.mwax_subfile_distributor:main
            mwacache_archiver = mwax_mover.mwacache_archive_processor:main
            mwacache_checks = mwax_mover.mwacache_checks:main
#
# Commented out for prod- this is a temporary test util
#
#            mwax_test = mwax_mover.test:main

[options.extras_require]
# Use: pip install -e .[test]
# to install the package in developer/editable mode along with the test dependencies.
test =
    pytest
